unpackaged/main/default/objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Beginning_Balance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Beginning_Balance__c</fullName>
    <description>Auto-populates upon creation or upon setting status to ‘Completed’ with the cleared balance from the prior bank reconciliation. If Override Beginning Balance checkbox is checked, then will not update upon setting status to ‘Completed’.</description>
    <inlineHelpText>The beginning balance of the bank reconciliation. This is usually retrieved from the bank statement.</inlineHelpText>
    <label>Beginning Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>