unpackaged/main/default/objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Calculated_GL_Balance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Calculated_GL_Balance__c</fullName>
    <formula>IF(ISPICKVAL(AcctSeed__Type__c, 'Bank')
, AcctSeed__Ending_Balance__c +  AcctSeed__UnCleared_Deposits__c -  AcctSeed__UnCleared_Payments__c 
, AcctSeed__Ending_Balance__c -  AcctSeed__UnCleared_Deposits__c +  AcctSeed__UnCleared_Payments__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If bank, calculated as statement ending balance + uncleared deposits - uncleared payments. If credit card, calculated as statement ending balance - uncleared payments + uncleared charges.</inlineHelpText>
    <label>Calculated Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>