unpackaged/main/default/objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Cleared_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Cleared_Disbursements__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Shall sum the total cleared cash disbursements and credit journal entry lines on the associated bank reconciliation record.</description>
    <inlineHelpText>The aggregate amount of cleared disbursements for the bank reconciliation. This includes all cleared cash disbursements and journal entry lines with a credit balance.</inlineHelpText>
    <label>Cleared Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>