unpackaged/main/default/objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Bank Reconciliations</relationshipLabel>
    <relationshipName>Bank_Reconciliations</relationshipName>
    <type>Lookup</type>
</CustomField>