unpackaged/main/default/objects/AcctSeed__Bank_Reconciliation2__c/fields/AcctSeed__Override_Beginning_Balance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Override_Beginning_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Overrides trigger that updates the Beginning Balance with prior bank reconciliation’s cleared balance when the status is set to Completed.</description>
    <inlineHelpText>Cleared balance from prior completed bank reconciliation will not be carried forward to this bank reconciliation if this override selected and a manual beginning balance entered.</inlineHelpText>
    <label>Override Beginning Balance</label>
    <type>Checkbox</type>
</CustomField>