unpackaged/main/default/objects/AcctSeed__Bank_Reconciliation2__c/listViews/AcctSeed__Bank_Reconciliations.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Bank_Reconciliations</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Bank_Account__c</columns>
    <columns>AcctSeed__End_Date__c</columns>
    <columns>AcctSeed__Beginning_Balance__c</columns>
    <columns>AcctSeed__Ending_Balance__c</columns>
    <columns>AcctSeed__Uncleared_Amount__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Type__c</field>
        <operation>equals</operation>
        <value>Bank</value>
    </filters>
    <label>Bank Reconciliations</label>
</ListView>